<resources>
    <string name="app_name">Yumm.it</string>
    <string name="logo">logo</string>
    <string name="yumm">yumm.</string>
    <string name="it">it</string>
    <string name="log_in">Log In</string>
    <string name="onboarding1">Delicious Food</string>
    <string name="lorem_ipsum">Lorem Ipsum Dolor Sim</string>
    <string name="onboarding">onboarding</string>

    <string name="facebook_app_id">686191005236723</string>
    <string name="fb_login_protocol_scheme">fb686191005236723</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="or">OR</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home">Home</string>
    <string name="my_order">My Order</string>
    <string name="inbox">Inbox</string>
    <string name="explore">Explore</string>

    <string name="background">background</string>
    <string name="favorite">Favorite</string>
    <string name="menu">Menu</string>
    <string name="search">Search</string>
    <string name="already_a_user">Already a User?</string>
    <string name="hungry_john">Hungry John?</string>
    <string name="delivery">Delivery</string>
    <string name="home_btn">home_btn</string>
    <string name="self_pickup">Self-pickup</string>
    <string name="donate">Donate</string>
    <string name="food_map">Food Map</string>
    <string name="sector_12_noida">Sector 12, Noida</string>
    <string name="frame">frame</string>
    <string name="kayana_cafe">Kayana Cafe</string>
    <string name="_2_9_km">2.9 Km</string>
    <string name="near_me">Near Me</string>
    <string name="nearest_restaurant">Nearest Restaurant</string>
    <string name="view_all">View All</string>
    <string name="gps_for_food">GPS for Food :)</string>
    <string name="we_need_permissions">We need permissions to access your current location in order to find delicious food near your place</string>
    <string name="cancel">Cancel</string>
    <string name="turn_on">Turn On</string>
    <string name="what_would">What would you like to eat?</string>
    <string name="eat_against_time">Eat Against Time</string>
    <string name="closing_hours_nearby">Closing Hours Nearby</string>
    <string name="choose_your_own_taste">Choose your own taste</string>
    <string name="nearby_restaurant">Nearby Restaurant</string>
    <string name="see_all">See All</string>
    <string name="wiyung_gang_1">Wiyung Gang 1</string>
    <string name="_00_45_23">00:45:23</string>
    <string name="pizza">Pizza</string>
    <string name="italian_cuisine">Italian Cuisine</string>
    <string name="_2_5">2.5</string>
    <string name="_378_reviews">(378 Reviews)</string>
    <string name="_20_mins">20 mins</string>
    <string name="top_meals">Top Meals</string>
    <string name="mini_dimsum">Mini Dimsum</string>
    <string name="rp_23_000">Rp. 23,000</string>
    <string name="rp_46_000">Rp. 46,000</string>
    <string name="aglio_o_lio">Aglio O\'lio</string>
    <string name="cheesy_mayo">Cheesy mayo sauce and mozzarella, tomatoes, green pepper, onion</string>
    <string name="add">ADD</string>
    <string name="remove">REMOVE</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="_2_items">2 Items</string>
    <string name="checkout">Checkout</string>
    <string name="order_now">Order Now</string>
    <string name="food_delivery_to">Food Delivery to :</string>
    <string name="citraland_a50_surabaya">Citraland A50, Surabaya</string>
    <string name="add_notes_about_destination_address">Add Notes About Destination Address</string>
    <string name="orders">Orders</string>
    <string name="payment_details">Payment Details</string>
    <string name="price">Price</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="rp_10_000">Rp. 10,000</string>
    <string name="total_payment">Total Payment</string>
    <string name="rp_56_000">Rp. 56,000</string>
    <string name="_1">1</string>
    <string name="add_notes">Add Notes</string>
    <string name="closing_hours_deals">Closing Hours Deals</string>
    <string name="fast_and_hungrious"><![CDATA[Fast & Hungrious]]></string>
    <string name="_30_minutes_delivery">30 Minutes Delivery</string>
    <string name="_30_40_min">30–40 min</string>
    <string name="_500">(500+)</string>
    <string name="on_process">On Process</string>
    <string name="finished">Finished</string>
    <string name="order_789a09sj0p1">Order #789A09SJ0P1</string>
    <string name="status">Status</string>
    <string name="food_arrives_in_est_25_minutes">Food Arrives in est. 25 Minutes</string>
    <string name="view"><![CDATA[View >]]></string>
    <string name="no_data">NO DATA</string>
    <string name="separator">|</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="john_doe">John Doe</string>
    <string name="johndoe_gmail_com">johndoe@gmail.com</string>
    <string name="loyalty_points">Yumm Points</string>
    <string name="_200">200</string>
    <string name="yumm_pay">yumm-pay</string>
    <string name="top__up">Top - Up</string>
    <string name="top_up">Top Up</string>
    <string name="rewards_promo"><![CDATA[Rewards & Promo]]></string>
    <string name="language">Language</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="log_out">Log Out</string>
    <string name="change_profile">Change Profile</string>
    <string name="save">Save</string>
    <string name="upload">Upload</string>
    <string name="name">Name</string>
    <string name="_62875643600">+62875643600</string>
    <string name="phone_number">Phone Number</string>
    <string name="bank_central_asia">Bank Central Asia</string>
    <string name="atm_or_mobile_banking">ATM or Mobile Banking</string>
    <string name="order_details">Order Details</string>
    <string name="about1">Yumm.IT merupakan perusahaan yang menjualkan makanan stok berlebih yang ada di restoran dan toko roti dengan harga spesial diskon melalui suatu aplikasi.</string>
    <string name="about2">Visi kami adalah Menjadikan aplikasi Yumm.IT menjadi aplikasi yang ternama di Indonesia yang mampu bersaing dalam pasar Internasional, dan dapat membuat dunia lebih mengurangi pembuangan limbah makanan berlebih. Dan misi kami yaitu membuat suatu aplikasi yang fungsinya menyediakan tempat untuk menjual berbagai macam makanan yang berlebih dari restoran-restoran yang berada di Indonesia serta menyalurkan makanan berlebih kepada orang yang membutuhkan.</string>
    <string name="total_amount">Total Amount</string>
    <string name="rp_5_000">Rp. 5,000</string>
    <string name="rp_15_000">Rp. 15,000</string>
    <string name="rp_20_000">Rp. 20,000</string>
    <string name="rp_25_000">Rp. 25,000</string>
    <string name="rp_50_000">Rp. 50,000</string>
    <string name="top_up_amount">Top Up Amount</string>
    <string name="check_out">Check Out</string>
    <string name="list_error_message">An error occurred while loading data</string>
</resources>
