<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/double_size"
    android:paddingTop="@dimen/default_size"
    android:paddingEnd="@dimen/double_size"
    android:paddingBottom="@dimen/double_size">

    <ImageView
        android:id="@+id/img_dialog_view_order_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_size"
        android:text="@string/order_details"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_dialog_view_order_close" />

    <TextView
        android:id="@+id/tv_dialog_view_order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_789a09sj0p1"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_dialog_view_order_foods"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_size"
        android:text="@string/price"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_dialog_view_order_foods" />

    <TextView
        android:id="@+id/tv_dialog_view_order_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rp_46_000"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_fee"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/tv_dialog_view_order_deliveryfee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rp_10_000"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_view_order_price" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_size"
        android:text="@string/total_payment"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_mediumsmall"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/tv_dialog_view_order_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rp_56_000"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_mediumsmall"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>