<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/default_size"
    android:paddingBottom="@dimen/default_size">

    <ImageView
        android:id="@+id/img_item_checkout"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_food_example_3"
        android:contentDescription="@string/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/frame"
        android:src="@drawable/frame"
        app:layout_constraintBottom_toBottomOf="@+id/img_item_checkout"
        app:layout_constraintEnd_toEndOf="@+id/img_item_checkout"
        app:layout_constraintStart_toStartOf="@+id/img_item_checkout"
        app:layout_constraintTop_toTopOf="@+id/img_item_checkout" />

    <TextView
        android:id="@+id/tv_item_checkout_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/half_size"
        android:layout_marginTop="@dimen/half_size"
        android:text="@string/mini_dimsum"
        android:textColor="@android:color/black"
        android:layout_marginEnd="@dimen/half_size"
        app:layout_constraintEnd_toStartOf="@+id/img_checkout_remove"
        app:layout_constraintStart_toEndOf="@+id/img_item_checkout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_item_checkout_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_size"
        android:text="@string/rp_23_000"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_smaller"
        app:layout_constraintEnd_toEndOf="@+id/tv_item_checkout_name"
        app:layout_constraintStart_toStartOf="@+id/tv_item_checkout_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_checkout_name" />

    <ImageView
        android:id="@+id/img_checkout_remove"
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_remove_circle"
        app:layout_constraintBottom_toBottomOf="@+id/tv_checkout_amount"
        app:layout_constraintEnd_toStartOf="@+id/tv_checkout_amount"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_checkout_amount"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_medium"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/img_checkout_add"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_checkout_add"
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_add_circle"
        app:layout_constraintBottom_toBottomOf="@+id/tv_checkout_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_checkout_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_notes"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_smaller"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_item_checkout"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>