<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="food"
            type="com.yummit.customer.model.Food" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/double_size"
        android:paddingTop="@dimen/default_size"
        android:paddingEnd="@dimen/double_size"
        android:paddingBottom="@dimen/double_size">

        <ImageView
            android:id="@+id/img_dialog_view_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/logo" />


        <ImageView
            android:id="@+id/img_dialog_view"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:contentDescription="@string/background"
            android:scaleType="centerCrop"
            tools:src="@drawable/bg_food_example_3"
            android:imageUrl="@{food.image}"
            android:layout_marginTop="@dimen/default_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_dialog_view_close" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/frame"
            android:scaleType="fitXY"
            android:src="@drawable/frame2"
            android:layout_marginTop="@dimen/default_size"
            app:layout_constraintBottom_toBottomOf="@+id/img_dialog_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_dialog_view_close" />

        <TextView
            android:id="@+id/tv_dialog_view_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_size"
            android:layout_marginEnd="@dimen/half_size"
            android:text="@{food.name}"
            tools:text="@string/mini_dimsum"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tv_dialog_view_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_dialog_view" />

        <TextView
            android:id="@+id/tv_dialog_view_pricefrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_size"
            tools:text="@string/rp_46_000"
            android:text="@{food.pricefrom}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_dialog_view" />

        <TextView
            android:id="@+id/tv_dialog_view_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_size"
            android:layout_marginEnd="@dimen/half_size"
            tools:text="@string/rp_23_000"
            android:text="@{food.price}"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/tv_dialog_view_pricefrom"
            app:layout_constraintTop_toBottomOf="@+id/img_dialog_view" />

        <TextView
            android:id="@+id/tv_dialog_view_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_size"
            tools:text="@string/cheesy_mayo"
            android:text="@{food.desc}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dialog_view_name" />

        <Button
            android:id="@+id/btn_dialog_view_addtocart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_size"
            android:background="@drawable/btn_orange"
            android:text="@string/add_to_cart"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dialog_view_desc" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
