<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/default_size"
    android:layout_marginBottom="@dimen/default_size"
    android:layout_marginStart="@dimen/double_size"
    android:layout_marginEnd="@dimen/double_size"
    app:cardElevation="@dimen/default_size"
    app:cardCornerRadius="@dimen/default_size"
    app:cardMaxElevation="@dimen/default_size"
    app:contentPadding="@dimen/default_size">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_myorder_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/kayana_cafe"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_mediumsmall"
            app:layout_constraintEnd_toStartOf="@+id/img_myorder_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_myorder_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_789a09sj0p1"
            android:textSize="@dimen/text_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_myorder_title" />

        <ImageView
            android:id="@+id/img_myorder_logo"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/round"
            android:backgroundTint="@color/colorTertiary"
            android:contentDescription="@string/logo"
            android:padding="@dimen/quarter_size"
            android:src="@drawable/ic_delivery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_myorder_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rp_56_000"
            android:textColor="@color/colorTertiary"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/quarter_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_myorder_logo" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/quarter_size"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/tv_myorder_price" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/quarter_size"
            android:text="@string/status"
            android:textSize="@dimen/text_smaller"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <TextView
            android:id="@+id/tv_myorder_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_arrives_in_est_25_minutes"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_smaller"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView10" />

        <TextView
            android:id="@+id/tv_myorder_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_small"
            app:layout_constraintBottom_toBottomOf="@+id/tv_myorder_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView10" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>